1.30 some error? heck where(